@startuml MonstersWeb
left to right direction

'==================== Classes ===================='

' Classe représentant un élément (type feu, eau, etc.)
class Element {
    -Int id
    -String nom
    --
    +efficaceContre(Element): Double ' Méthode pour calculer l'efficacité contre un autre élément
}

' Classe représentant l'espèce d'un monstre avec ses statistiques de base
class EspeceMonstre {
    -int id
    -String nom
    -String type
    -int baseAttaque
    -int baseDefense
    -int baseVitesse
    -int baseAttaqueSpe
    -int baseDefenseSpe
    -int basePv
    -double modAttaque
    -double modDefense
    -double modVitesse
    -double modAttaqueSpe
    -double modDefenseSpe
    -double modPv
    -String description
    -String particularites
    -String caractères
    -MutableList~Element~ elements ' Liste des éléments associés à l'espèce
    --
    +afficheArt(deFace: Boolean = true): String ' Affiche le visuel du monstre
}

' Classe représentant un monstre individuel appartenant à un joueur ou sauvage
class IndividuMonstre {
    -int id
    -String nom
    -EspeceMonstre espece
    -Entraineur? entraineur ' Peut être nul si le monstre est sauvage
    -double expInit
    -int niveau
    -int attaque
    -int defense
    -int vitesse
    -int attaqueSpe
    -int defenseSpe
    -int pvMax
    -double potentiel
    -double exp
    -int pv
    -MutableList~Technique~ techniques
    --
    +palierExp(niveau: Int): Double ' Calcul de l'expérience nécessaire pour le niveau suivant
    +levelUp() ' Monter de niveau
    +attaquer(cible: IndividuMonstre) ' Attaquer un autre monstre
    +renommer(monstre: IndividuMonstre) ' Changer le nom du monstre
    +afficherDetail(monstre: IndividuMonstre) ' Afficher les stats du monstre
}

' Classe représentant une technique ou attaque
class Technique {
    -int id
    -String nom
    -double precision
    -double multiplicateurDePuissance
    -boolean estBuff
    -boolean estDebuff
    -boolean estSpecial
    -boolean faireDegat
    -Element elementTechnique ' L'élément associé à la technique
    --
    +calculerPrecision(): Boolean ' Vérifie si la technique touche
    +calculBonusStab(individu: IndividuMonstre): Double ' Bonus STAB (type identique)
    +effet(attaquant: IndividuMonstre, defenseur: IndividuMonstre): Double ' Calcul des dégâts/effets
}

' Classe représentant un combat entre deux monstres
class CombatMonstre {
    -IndividuMonstre monstreJoueur
    -IndividuMonstre monstreSauvage
    -int round
    --
    +gameOver(): Boolean
    +joueurGagne(): Boolean
    +actionAdverse()
    +actionJoueur(): Boolean
    +afficheCombat()
    +jouer()
    +lanceCombat()
}

' Classe représentant un entraîneur (joueur)
class Entraineur {
    -Int id
    -String nom
    -String Utilisateur
    -MutableList~IndividuMonstre~ equipeMonstre
    -MutableList~Item~ sacAItems
}

' Classe représentant un item utilisable
class Item {
    -Int id
    -String nom
}

' Interface pour les objets utilisables par un monstre
interface Utilisable {
    +utiliser(monstre: IndividuMonstre): Boolean
}

' Classe représentant une zone avec des monstres sauvages
class Zone {
    -int id
    -String nom
    -int expZone
    -MutableList~EspeceMonstre~ especeMonstres
    -Zone? zoneSuivante
    -Zone? zonePrecedente
    --
    +genereMonstre(): IndividuMonstre ' Génère un monstre aléatoire dans la zone
    +rencontreMonstre() ' Lancer une rencontre avec un monstre
}

' Nouvelle classe Partie représentant une partie en cours
class Partie {
    -int id
    -Entraineur joueur
    -Zone zone
    --
    +choisirStarter() ' Choisir le premier monstre
    +modifierOrdreEquipe() ' Modifier l'ordre des monstres dans l'équipe
    +examineEquipe() ' Vérifier l'équipe
    +jouer() ' Démarrer la partie
}

' Classe représentant un visiteur non inscrit
class Visiteur {
    -int id
}

' Classe représentant un utilisateur enregistré
class Utilisateur {
    -int id
    -String mdp
    -String email
    --
    +lancerJeu(): Entraineur ' Devient un entraîneur et démarre une partie
}

' Classe représentant un avis laissé par l'utilisateur
class Avis {
    -int id
    -String nom
    -Date LocalDate
}

'==================== Relations ===================='

EspeceMonstre "1" --> "1..2" Element : elements
IndividuMonstre "1" --> "1" EspeceMonstre : espece
IndividuMonstre "1" --> "0..4" Technique : techniques
Technique "1" --> "1" Element : elementTechnique
CombatMonstre "1" --> "1" IndividuMonstre : monstreJoueur
CombatMonstre "1" --> "1" IndividuMonstre : monstreSauvage
IndividuMonstre "*" --> "1" Entraineur : entraineur
Entraineur "1" --> "*" IndividuMonstre : equipeMonstre
Entraineur "1" --> "*" Item : sacAItems
Item ..|> Utilisable
Zone "1" --> "*" EspeceMonstre : especeMonstres
Zone "1" -- "0..1" Zone : zoneSuivante/zonePrecedente
Utilisateur "1" --> "1" Avis : rédige un avis

' Relations pour évolution de rôle
Utilisateur "1" --> "0..1" Entraineur : après lancement du jeu (jeu())
Visiteur "1" --> "0..1" Utilisateur : après inscription

' Relation d'utilisation de Partie par Utilisateur
Utilisateur ..> Partie : jouer()

' Partie contient un joueur (Entraineur)
Partie "1" --> "1" Entraineur : joueur

' Partie se déroule dans une Zone
Partie "1" --> "1" Zone : zone

' Partie utilise les monstres du joueur pour jouer des combats
Partie "1" --> "*" IndividuMonstre : utilise pour combats

' Partie peut créer/lancer des combats
Partie "1" --> "*" CombatMonstre : génère

@enduml
